[build - system]
build - backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "discordpy-bot-template-with-commands-extension"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.2.2"
"discord.py" = "^1.3.4"
google-api-python-client = "^2.65.0"
google-cloud-texttospeech = "^2.12.3"
python = "^3.8"
youtube_dl = "^2021.12.17"
pynacl = "^1.5.0"
[tool.poetry.dev - dependencies]
